add option for cleanup load
